syntax = "proto3";

package pi_proto;

message Nilakantha {
uint64 series_length = 1;
}